; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_vnops.c_zfs_iput_async.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_vnops.c_zfs_iput_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.TYPE_2__ = type { i32* }

@TQ_SLEEP = common dso_local global i32 0, align 4
@TASKQID_INVALID = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfs_iput_async(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca i32*, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %4 = load %struct.inode*, %struct.inode** %2, align 8
  %5 = call %struct.TYPE_2__* @ITOZSB(%struct.inode* %4)
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  store i32* %7, i32** %3, align 8
  %8 = load %struct.inode*, %struct.inode** %2, align 8
  %9 = getelementptr inbounds %struct.inode, %struct.inode* %8, i32 0, i32 0
  %10 = call i32 @atomic_read(i32* %9)
  %11 = icmp sgt i32 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = icmp ne i32* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 @ASSERT(i32 %16)
  %18 = load %struct.inode*, %struct.inode** %2, align 8
  %19 = getelementptr inbounds %struct.inode, %struct.inode* %18, i32 0, i32 0
  %20 = call i32 @atomic_read(i32* %19)
  %21 = icmp eq i32 %20, 1
  br i1 %21, label %22, label %33

22:                                               ; preds = %1
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @dmu_objset_pool(i32* %23)
  %25 = call i32 @dsl_pool_iput_taskq(i32 %24)
  %26 = load %struct.inode*, %struct.inode** %2, align 8
  %27 = load i32, i32* @TQ_SLEEP, align 4
  %28 = call i64 @taskq_dispatch(i32 %25, i32* bitcast (i32 (%struct.inode*)* @iput to i32*), %struct.inode* %26, i32 %27)
  %29 = load i64, i64* @TASKQID_INVALID, align 8
  %30 = icmp ne i64 %28, %29
  %31 = zext i1 %30 to i32
  %32 = call i32 @VERIFY(i32 %31)
  br label %36

33:                                               ; preds = %1
  %34 = load %struct.inode*, %struct.inode** %2, align 8
  %35 = call i32 @iput(%struct.inode* %34)
  br label %36

36:                                               ; preds = %33, %22
  ret void
}

declare dso_local %struct.TYPE_2__* @ITOZSB(%struct.inode*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i64 @taskq_dispatch(i32, i32*, %struct.inode*, i32) #1

declare dso_local i32 @dsl_pool_iput_taskq(i32) #1

declare dso_local i32 @dmu_objset_pool(i32*) #1

declare dso_local i32 @iput(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
